force-app/main/default/objects/Customer_Note_Info__c/Customer_Note_Info__c.object-meta.xml
<CustomObject>
    <description>ข้อมูลการควบรวมธนาคารของลูกค้า Commercial</description>
    <label>Customer Note Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Note Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Note Info</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>