force-app/main/default/objects/Customer_Note_Info__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Note Info</relationshipLabel>
    <relationshipName>Customer_Note_Info</relationshipName>
    <type>Lookup</type>
</CustomField>