force-app/main/default/objects/Customer_Note_Info__c/fields/Migration_Customer_Info_No__c.field-meta.xml
<CustomField>
    <fullName>Migration_Customer_Info_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Migration Customer Info No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>