force-app/main/default/objects/Customer_Note_Info__c/fields/Migration_Info_Text__c.field-meta.xml
<CustomField>
    <fullName>Migration_Info_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>