force-app/main/default/objects/Customer_Note_Info__c/fields/Migration_Info_Title__c.field-meta.xml
<CustomField>
    <fullName>Migration_Info_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>